rajout de     overflow-clip-margin: unset; aux images pour qu'elles soient correctes sur chrome

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -12,6 +12,10 @@ body {
     justify-content: center;
 }
 
+img {
+    overflow-clip-margin: unset;
+}
+
 #modal__bg {
     position: fixed;
     height: 100vh;
