--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ main {
     height: 100%;
     width: 100%;
     transition: .3s;
+    overflow-clip-margin: unset;
 }
 
 .photographer_section article img:hover {
